# runflow-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md
.github/workflows/: ci.yml  release.yml
demo/: demo.ps1
docs/: AGENT_MVP_SPEC.md  autopilot-apply-design.md  autopilot-design.md  demo.md  index.html  install.md  oncall-design.md  post-v1-agent-modes.md  providers.md  v1-roadmap.md  watch-design.md
schemas/: agent-draft.schema.json  agent-explain-run.schema.json  agent-report.schema.json  agent-review.schema.json
scripts/: install-local.ps1  install.ps1  install.sh  test-release-smoke.ps1
src/: agent.rs  audit.rs  cli.rs  config.rs  json.rs  main.rs  model.rs  runflow.rs  strict_json.rs  util.rs
src/commands/: autopilot.rs  doctor.rs  draft.rs  explain_run.rs  inspect_workspace.rs  mod.rs  oncall.rs  report.rs  review.rs  self_update.rs  watch.rs
src/schema_defs/v1/: workflow.schema.json
