[package]
name = "runflow-agent"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description = "Assist-only external agent for RunFlow workflows"
repository = "https://github.com/dandyArise/runflow-agent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.46.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
